src/main/java/com/example/crud/error/model/ErrorResponse.java
package com.example.crud.error.model;public class ErrorResponse {
}
